RESOLVED FIXED153326
[iOS] Crash in _endPotentialTapAndEnableDoubleTapGesturesIfNecessary
https://bugs.webkit.org/show_bug.cgi?id=153326
Summary [iOS] Crash in _endPotentialTapAndEnableDoubleTapGesturesIfNecessary
Dean Jackson
Reported 2016-01-21 14:44:42 PST
We're getting a lot of reports of crashes in -[WKContentView(WKInteraction) _endPotentialTapAndEnableDoubleTapGesturesIfNecessary] <rdar://problem/24264339>
Attachments
Patch (3.75 KB, patch)
2016-01-21 15:07 PST, Dean Jackson
andersca: review+
Dean Jackson
Comment 1 2016-01-21 15:07:11 PST
Anders Carlsson
Comment 2 2016-01-21 15:17:05 PST
Comment on attachment 269500 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=269500&action=review > Source/WebKit2/UIProcess/ios/WKContentView.h:78 > +- (void)_disconnectWebView; Maybe call this _webViewDestroyed instead? > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:1259 > - if (_webView._allowsDoubleTapGestures) > + if (_webView && _webView._allowsDoubleTapGestures) No need to check _webView for nil here. _allowsDoubleTapGestures will return false if _webView is nil.
Dean Jackson
Comment 3 2016-01-21 15:36:49 PST
Note You need to log in before you can comment on or make changes to this bug.