Source/WebKit2/UIProcess/ios/WKContentView.h
@@ -75,6 +75,8 @@ class WebProcessPool;
 - (void)didZoomToScale:(CGFloat)scale;
 - (void)willStartZoomOrScroll;
 
+- (void)_webViewDestroyed;
+
 - (std::unique_ptr<WebKit::DrawingAreaProxy>)_createDrawingAreaProxy;
 - (void)_processDidExit;
 - (void)_didRelaunchProcess;
